--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 #updated 02 14 2025 300pm 
 
-# this will  make it so we are only pushing the theme fils
+# this will  make it so we are only pushing the theme files
 
 app/
 conf/
